# investments_f

./: 2022_07_27_EUROSTOXX_MaxArea_Portfolio_250.xlsx  2022_07_27_NASDAQ100_MaxArea_Portfolio_250.xlsx  2022_11_07_EUROSTOXX_MaxArea_Portfolio_250.xlsx  2022_11_07_NASDAQ_MaxArea_Portfolio_250.xlsx  EUROSTOXX_ret_250.xlsx  NASDAQ100_ret_250.xlsx  PORTFOLIO TRACKING.txt  Ptf_2022_01_22.xlsx  Ptf_performance.xlsx  S_Backtester.mlx  S_portfolio_computation.mlx  portfolio ipynb.txt  portfolio performance.xlsx  pyproject.toml  tickers_EUROSTOXX.xlsx
2022_01_22/: NASDAQ_ret.xlsx  Prova_investments.mlx  Ptf_2022_01_22.xlsx  S_portfolio_computation.mlx
2022_01_22/EUROSTOXX/: 2022_01_22_EUROSTOXX_MaxArea_Portfolio_250.xlsx  2022_01_22_EUROSTOXX_MaxArea_Portfolio_250_20.xlsx  2022_01_22_EUROSTOXX_MaxArea_Portfolio_750.xlsx  EUROSTOXX_ret_250.xlsx  EUROSTOXX_ret_750.xlsx  tickers_EUROSTOXX.txt
2022_01_22/NASDAQ/: 2022_01_22_NASDAQ_MaxArea_Portfolio.xlsx  2022_01_22_NASDAQ_MaxArea_Portfolio_250_20.xlsx
2022_02_24/EUROSTOXX/: 2022_02_24_EUROSTOXX_MaxArea_Portfolio_250.xlsx
2022_02_24/NASDAQ/: NASDAQ_ret_250.xlsx
2022_06_21/: 2022_06_21_EUROSTOXX_MaxArea_Portfolio_250.xlsx  2022_06_21_NASDAQ_MaxArea_Portfolio_250.xlsx  EUROSTOXX_ret_250.xlsx
2022_07_27/: 2022_07_27_EUROSTOXX_MaxArea_Portfolio_250.xlsx  2022_07_27_NASDAQ100_MaxArea_Portfolio_250.xlsx  NASDAQ100_ret_250.xlsx
Datasets/: Eurostoxx50.mat  FTSE100.mat  FTSE100_DL250.mat  HangSeng.mat  NASDAQ100.mat  NASDAQ100_DL250.mat  p_FTSE100.mat
Functions/: F_AvgDD_HRP.m  F_Backtester.mlx  F_Backtester_MaxArea.mlx  F_Backtester_Trading.mlx  F_CDaR_Frontier.m  F_CDaR_Tangent.mlx  F_CDaR_gamma.m  F_CVaR.mlx  F_CVaR_Frontier.m  F_CVaR_Tangent.mlx  F_CVaR_gamma.m  F_Choose_HI.m  F_HI_calculator.mlx  F_HRP.m  F_HistFiltBoot.mlx  F_MAD_Frontier.m  F_MAD_OptimizeArea.mlx  F_MAD_Tangent.m  F_MAD_gamma.m  F_MDP.m  F_Markowitz_Frontier.m  F_Markowitz_gamma.m  F_MaxArea.asv  F_MaxArea.m  F_MaxLoss_Tangent.mlx  F_MaxRachev.mlx  F_MaxSerenity.mlx  F_MaxSharpe.m  F_MaxSortino.mlx  F_MeanSemivariance_Frontier.mlx  F_MinVariance_quad.mlx  F_Min_MaxLoss.mlx  F_MostDiversifiedPortfolio.m  F_Nadir_MaxArea.mlx  F_Performance_Analysis.mlx  F_ReverseRachev.mlx  F_minMAD.mlx  allocByInverseVariance.m  getLeafNodesInGroup.m  getMarketDataViaYahoo.m  (+1 more)
Stuff/: README.md
data_downloader/: EUROSTOXX_ret_250.xlsx  Ptf_NASDAQ.ipynb  alpaca_market_data.py  data_downloader.ipynb  data_downloader_script.py  market_data.py  tickers.py
historic ptf/: giancarlo_eu.json  giancarlo_us.json
ptf tracker json/: giancarlo_eu.json  giancarlo_us.json
(+116 files in other folders)
