[tool.poetry]
name = "investments_f"
version = "0.1.0"
description = "investments_f"
authors = ["Filippo"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10.7"
numpy = ">=1.21.5"
pandas = ">=1.4.0"
yfinance = ">=0.1.69"
alpaca-py = "^0.6.0"

[tool.poetry.dev-dependencies]
poetry = ">=1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.master]
jobs = 0
extension-pkg-whitelist = "pydantic"

[tool.pylint.message_control]
disable = [
    "duplicate-code",
    "invalid-name",
    "invalid-unary-operand-type",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "line-too-long",
    "logging-fstring-interpolation",
    "cache-max-size-none",
    "too-many-statements",
    "trailing-whitespace",
    "trailing-newlines",
    "fixme"
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.logging]
logging-format-style = "new"
